<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.nicico.copper</groupId>
        <artifactId>copper-starter-parent</artifactId>
        <version>2.3.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.nicico.sales</groupId>
    <artifactId>sales-project</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <modules>
        <module>model</module>
        <module>repository</module>
        <module>service</module>
        <module>controller</module>
        <module>web</module>
        <module>main</module>
    </modules>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
        </dependency>

        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-functions</artifactId>
            <version>6.9.0</version>
        </dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.16</version>
		</dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>ooxml-schemas</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>NICICO</id>

            <distributionManagement>
                <snapshotRepository>
                    <id>nexus-dist</id>
                    <url>http://devops01.icico.net.ir/nexus/repository/maven-snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>nexus-dist</id>
                    <url>http://devops01.icico.net.ir/nexus/repository/maven-releases/</url>
                </repository>
            </distributionManagement>

            <repositories>
                <repository>
                    <id>nexus</id>
                    <url>http://devops01.icico.net.ir/nexus/repository/maven-public/</url>
                </repository>
            </repositories>
        </profile>
    </profiles>
</project>
